--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,9 @@
 }
 
 .header {
+  .container {
+    display: flex;
+  }
 }
 
 .category {
@@ -144,6 +147,125 @@
 
     input[type="checkbox"]:checked + label:before {
       background-color: #ccc;
+    }
+  }
+}
+
+.product-info {
+  .container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &-photo {
+    width: 600px;
+    height: 450px;
+  }
+
+  &__block {
+    margin-left: 50px;
+
+    &-name {
+      margin-bottom: 20px;
+      font-size: 35px;
+      font-weight: normal;
+    }
+
+    &-price {
+      text-align: center;
+      padding: 8px 0px;
+      margin-bottom: 25px;
+      border-top: 1px solid #000;
+      border-bottom: 1px solid #000;
+      color: #cd5a00;
+      font-weight: 700;
+      font-size: 25px;
+    }
+
+    &-brand {
+      margin-bottom: 10px;
+      color: #cd5a00;
+      span {
+        margin-left: 10px;
+        font-weight: 700;
+        color: #000;
+      }
+    }
+
+    &-color {
+      margin-bottom: 20px;
+      color: #cd5a00;
+      span {
+        margin-left: 24px;
+        font-weight: 700;
+        color: #000;
+      }
+    }
+
+    &-how {
+      margin-bottom: 20px;
+
+      h3 {
+        color: #cd5a00;
+        font-weight: normal;
+        margin-bottom: 10px;
+      }
+
+      li {
+        margin-left: 20px;
+        font-size: 15px;
+      }
+    }
+
+    &-size,
+    &-count {
+      margin-bottom: 25px;
+
+      label {
+        font-size: 14px;
+        margin-right: 20px;
+        opacity: 0.7;
+      }
+
+      option {
+        font-size: 16px;
+      }
+
+      select,
+      input {
+        width: 200px;
+        padding: 8px;
+        border: 1px solid #000;
+        border-radius: 5px;
+      }
+    }
+
+    button {
+      width: 250px;
+      padding: 13px 0px;
+      border: none;
+      background-color: #000;
+      color: #fff;
+      border-radius: 5px;
+    }
+  }
+}
+
+.brand {
+  background-color: #f5f5f5;
+  margin-top: 80px;
+
+  .container {
+    padding: 40px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__item {
+    img {
+      width: 108px;
+      height: 80px;
     }
   }
 }
