--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,72 @@
 }
 
 .header {
+  height: 70px;
+  padding: 8px 0px;
+  margin-bottom: 25px;
+
   .container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navigation {
+    display: flex;
+    align-items: center;
+    
+    a {
+      margin-right: 25px;
+      text-decoration: none;
+      color: #000;
+      transition: all 0.5s;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+
+  .header__right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .cart {
+      transition: all 0.5s;
+
+      img {
+        width: 35px;
+        height: 35px;
+      }
+      a {
+        width: 100%;
+        height: 100%;
+      }
+  
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+    }
+    
+    .login {
+      text-decoration: none;
+      display: inline-block;
+      width: 170px;
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 7px 0px;
+      margin-right: 30px;
+      transition: all 0.5s;
+
+      &:hover {
+        background-color: #ccc;
+        color: #000;
+        border: 1px solid #000;
+      }
+    }
   }
 }
 
@@ -70,7 +134,6 @@
 
   h1 {
     text-align: center;
-    margin-top: 25px;
     margin-bottom: 50px;
   }
 }
