--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,9 @@
 
 .header {
   height: 70px;
-  padding: 8px 0px;
+  padding: 13px 0px;
   margin-bottom: 25px;
+  background-color: #f5f5f5;
 
   .container {
     display: flex;
@@ -25,7 +26,7 @@
   .navigation {
     display: flex;
     align-items: center;
-    
+
     a {
       margin-right: 25px;
       text-decoration: none;
@@ -54,13 +55,13 @@
         width: 100%;
         height: 100%;
       }
-  
+
       &:hover {
         cursor: pointer;
         transform: scale(1.1);
       }
     }
-    
+
     .login {
       text-decoration: none;
       display: inline-block;
@@ -94,7 +95,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 15px 0px;
+    margin: 30px 0px;
   }
   &-item {
     width: 45%;
@@ -130,6 +131,7 @@
   .container {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   h1 {
@@ -215,6 +217,9 @@
 }
 
 .product-info {
+  margin-bottom: 200px;
+  margin-top: 50px;
+
   .container {
     display: flex;
     justify-content: space-between;
@@ -329,6 +334,90 @@
     img {
       width: 108px;
       height: 80px;
+      object-fit: contain;
+    }
+  }
+}
+
+.cart {
+  &-block {
+    display: flex;
+    flex-direction: column;
+
+    &__item {
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid #ccc;
+      padding: 15px;
+      margin-bottom: 20px;
+
+      &-desc__name {
+        margin-bottom: 15px;
+        font-size: 25px;
+        font-weight: normal;
+      }
+
+      &-desc__price {
+        color: #cd5a00;
+        margin-bottom: 15px;
+      }
+
+      &-desc__quantiity {
+        color: #cd5a00;
+        margin-bottom: 35px;
+      }
+
+      span {
+        margin-right: 5px;
+      }
+
+      &-desc__size {
+        margin-bottom: 15px;
+      }
+
+      img {
+        width: 350px;
+        height: 200px;
+      }
+
+      button {
+        padding: 8px 0px;
+        width: 250px;
+        border: 1px solid #ccc;
+      }
+    }
+  }
+}
+
+.total-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #f5f5f5;
+  padding: 15px;
+
+  span {
+    &:last-child {
+      color: #cd5a00;
+      font-size: 25px;
+    }
+  }
+}
+
+.buy-block {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+
+  button {
+    padding: 10px 0px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: #f5f5f5;
     }
   }
 }
