--- a/src/App.scss
+++ b/src/App.scss
@@ -384,8 +384,24 @@
         padding: 8px 0px;
         width: 250px;
         border: 1px solid #ccc;
+        transition: all 0.5s;
+        background-color: #f5f5f55;
+
+        &:hover {
+          background-color: #000;
+          color: #fff
+        }
       }
     }
+  }
+
+  &-empty {    
+    padding: 12px 15px;
+    width: 300px;
+    background-color: #000;
+    text-align: center;
+    margin: 50px auto;
+    color: #fff
   }
 }
 
@@ -417,7 +433,71 @@
     transition: all 0.5s;
 
     &:hover {
-      background-color: #f5f5f5;
+      opacity: 0.7;
     }
   }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9;
+  background: rgba(0,0,0,0.5);
+
+  &-dialog {
+    position: relative;
+    width: auto;
+    margin: 100px auto;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+  }
+
+  &-content {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    background-color: #fff;
+    padding: 8px 15px;
+
+    h3 {
+      text-align: center;  
+      margin-bottom: 15px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+
+      input {
+        margin-bottom: 15px;
+        padding: 5px;
+      }
+
+      label {
+        color: #cd5a00;
+        margin-bottom: 5px;
+      }
+
+      button {
+        margin-bottom: 30px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 8px 0px;
+        transition: 0.5s;
+
+        &:hover {
+          background-color: #000;
+          color: #fff;
+        }
+      }
+    }
+  }
+}
+
+.none {
+  display: none;
 }
