--- a/src/App.scss
+++ b/src/App.scss
@@ -355,16 +355,28 @@
         margin-bottom: 15px;
         font-size: 25px;
         font-weight: normal;
+
+        span {
+          color: #000;
+        }
       }
 
       &-desc__price {
         color: #cd5a00;
         margin-bottom: 15px;
+
+        span {
+          color: #000;
+        }
       }
 
       &-desc__quantiity {
         color: #cd5a00;
         margin-bottom: 35px;
+
+        span {
+          color: #000;
+        }
       }
 
       span {
@@ -373,6 +385,11 @@
 
       &-desc__size {
         margin-bottom: 15px;
+        color: #cd5a00;
+
+        span {
+          color: #000;
+        }
       }
 
       img {
@@ -385,7 +402,7 @@
         width: 250px;
         border: 1px solid #ccc;
         transition: all 0.5s;
-        background-color: #f5f5f55;
+        background-color: #f5f5f5;
 
         &:hover {
           background-color: #000;
@@ -500,4 +517,86 @@
 
 .none {
   display: none;
+}
+
+.login {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h2 {
+    text-align: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin-top: 35px;
+  }
+
+  label {
+    margin-bottom: 10px;
+    color: #cd5a00;
+  }
+
+  input {
+    margin-bottom: 30px;
+    padding: 7px;
+    border-radius: 5px;
+  }
+  
+  button {
+    padding: 7px 0px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 30px;
+  }
+}
+
+.register {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h2 {
+    margin-bottom: 30px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+  }
+
+  label {
+    margin-bottom: 10px;
+    color: #cd5a00;
+  }
+
+  input {
+    margin-bottom: 30px;
+    padding: 7px;
+    border-radius: 5px;
+  }
+
+  button {
+    padding: 7px 0px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+}
+
+.not-auth {
+  padding: 8px 0px;
+  width: 350px;
+  background-color: #f8d7da;
+  text-align: center;
+  margin: 50px auto;
 }
