--- a/src/App.scss
+++ b/src/App.scss
@@ -62,7 +62,8 @@
       }
     }
 
-    .login {
+    .login,
+    .admin {
       text-decoration: none;
       display: inline-block;
       width: 170px;
@@ -321,7 +322,7 @@
 
 .brand {
   background-color: #f5f5f5;
-  margin-top: 80px;
+  margin: 80px 0px;
 
   .container {
     padding: 40px 0px;
@@ -406,19 +407,19 @@
 
         &:hover {
           background-color: #000;
-          color: #fff
+          color: #fff;
         }
       }
     }
   }
 
-  &-empty {    
+  &-empty {
     padding: 12px 15px;
     width: 300px;
     background-color: #000;
     text-align: center;
     margin: 50px auto;
-    color: #fff
+    color: #fff;
   }
 }
 
@@ -462,7 +463,7 @@
   right: 0;
   bottom: 0;
   z-index: 9;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
 
   &-dialog {
     position: relative;
@@ -478,10 +479,12 @@
     flex-direction: column;
     width: 500px;
     background-color: #fff;
-    padding: 8px 15px;
+    padding: 20px;
+    border-radius: 30px;
 
-    h3 {
-      text-align: center;  
+    h3,
+    h2 {
+      text-align: center;
       margin-bottom: 15px;
     }
 
@@ -547,7 +550,7 @@
     padding: 7px;
     border-radius: 5px;
   }
-  
+
   button {
     padding: 7px 0px;
     text-align: center;
@@ -599,4 +602,238 @@
   background-color: #f8d7da;
   text-align: center;
   margin: 50px auto;
+}
+
+.admin-page__title {
+  text-align: center;
+}
+
+.change {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #000;
+    margin-bottom: 20px;
+    padding: 15px;
+
+    p {
+      width: 400px;
+    }
+
+    p:nth-child(2) {
+      margin-left: 150px;
+      color: #cd5a00;
+    }
+
+    p:nth-child(3) {
+      img {
+        transition: all 0.5s;
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.5);
+        }
+      }
+    }
+
+    span {
+      margin-right: 20px;
+
+      img {
+        transition: all 0.5s;
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.5);
+        }
+      }
+    }
+  }
+}
+
+.add-product {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+
+  button {
+    padding: 8px 0px;
+    width: 250px;
+    background-color: #000;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    color: #fff;
+  }
+}
+
+.footer {
+  background-color: #000;
+  color: #fff;
+
+  .info {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 0 30px;
+  }
+
+  .title {
+    text-transform: uppercase;
+    font-size: 16px;
+    border-bottom: 1px solid #2e2e2e;
+    padding: 0 0 10px;
+    margin: 0 0 15px;
+  }
+
+  a {
+    color: #fff;
+  }
+
+  li {
+    margin: 0 0 8px;
+  }
+
+  p {
+    margin: 0 0 10px;
+  }
+
+  .soc_links {
+    font-size: 25px;
+    margin-right: 10px;
+    transition: 0.5s;
+    color: white;
+
+    &:hover {
+      opacity: 0.5;
+      transition: 0.5s;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .form_group {
+    margin: 0 0 10px;
+    zoom: 1;
+  }
+
+  .subscribe input[type="email"] {
+    color: #eee;
+  }
+
+  .light {
+    background: transparent;
+    border: 1px solid #fff;
+    height: 42px;
+    line-height: 40px;
+  }
+}
+
+.order {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: all 0.5s;
+    color: #000;
+    text-decoration: none;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
+
+    p {
+      color: #cd5a00;
+      font-size: 20px;
+    }
+  }
+}
+
+.order-info {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  &-block {
+    margin-bottom: 30px;
+
+    h2 {
+      font-weight: 400;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 10px;
+    }
+
+    span {
+      margin-left: 10px;
+      color: #cd5a00;
+    }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+
+    img {
+      width: 300px;
+      height: 200px;
+    }
+
+    &-desc {
+      display: flex;
+      flex-direction: column;
+
+      h3 {
+        font-size: 25px;
+        font-weight: 400;
+        margin-bottom: 15px;
+      }
+
+      p {
+        margin-bottom: 10px;
+
+        span {
+          color: #cd5a00;
+          margin-left: 10px;
+        }
+      }
+    }
+  }
 }
