--- a/src/App.scss
+++ b/src/App.scss
@@ -333,8 +333,10 @@
 
   &__item {
     img {
-      width: 108px;
-      height: 80px;
+      max-width: 108px;
+      max-height: 80px;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
   }
@@ -835,5 +837,15 @@
         }
       }
     }
+  }
+}
+
+
+.error {
+  padding: 8px 15px;
+  background-color: #f8d7da;
+
+  p {
+    color: #000;
   }
 }
