--- a/src/App.scss
+++ b/src/App.scss
@@ -837,3 +837,41 @@
     }
   }
 }
+
+.pagination {
+  margin: 0 auto;
+  max-width: 1200px;
+
+  &-list {
+    display: flex;
+  }
+
+  .page-item {
+    margin-right: 20px;
+    list-style: none;
+    padding: 10px 17px;
+    background-color: #000;
+    border-radius: 50px;
+    cursor: pointer;
+
+    span {
+      color: #fff;
+    }
+  }
+}
+
+.search {
+  display: flex;
+  justify-content: center;
+  margin: 35px 0px;
+
+  input {
+    width: 400px;
+    padding: 7px 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    color: #cd5a00;
+    font-size: 16px;
+    text-align: center;
+  }
+}
