--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,7 @@
         width: 35px;
         height: 35px;
       }
+
       a {
         width: 100%;
         height: 100%;
@@ -59,6 +60,55 @@
       &:hover {
         cursor: pointer;
         transform: scale(1.1);
+      }
+    }
+
+    .user {
+      transition: all 0.5s;
+      margin-right: 20px;
+      position: relative;
+      cursor: pointer;
+
+      img {
+        width: 35px;
+        height: 35px;
+      }
+
+      a {
+        width: 100%;
+        height: 100%;
+      }
+
+      &-info {
+        display: flex;
+      }
+    }
+
+    .hide {
+      display: none;
+    }
+
+    .active {
+      width: 210px;
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 57px;
+      right: -37px;
+      border: 1px solid #000;
+      z-index: 9;
+
+      a {
+        color: #000;
+        text-decoration: none;
+        text-align: center;
+        padding: 10px 0px;
+        border-top: 1px solid #000;
+        transition: all 0.5s;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
 
@@ -152,6 +202,30 @@
     flex-direction: column;
     margin-right: 20px;
     margin-bottom: 25px;
+    position: relative;
+
+    .star {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+
+      path {
+        transition: all 0.2s;
+      }
+
+      &:hover {
+        path {
+          fill: #ffc107;
+        }
+      }
+    }
+
+    .active {
+      path {
+        fill: #ffc107;
+      }
+    }
 
     &-img {
       width: 300px;
@@ -884,5 +958,94 @@
 
   p {
     color: #000;
+  }
+}
+
+.favorite {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-title {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 50px;
+  }
+
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #000;
+    padding: 15px;
+    margin-bottom: 25px;
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+
+      h2 {
+        color: #cd5a00;
+        margin-bottom: 30px;
+        font-size: 30px;
+      }
+
+      p {
+        font-size: 25px;
+        margin-bottom: 30px;
+      }
+
+      a {
+        border: 1px solid #000;
+        width: 250px;
+        padding: 7px 15px;
+        color: #000;
+        background-color: #fff;
+        cursor: pointer;
+        transition: all 0.5s;
+        text-align: center;
+        text-decoration: none;
+
+        &:hover {
+          background-color: #f5f5f5;
+        }
+      }
+    }
+
+    img {
+      width: 300px;
+    }
+  }
+}
+
+.history {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-title {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 50px;
+  }
+
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #000;
+    margin-bottom: 25px;
+    padding: 15px;
+
+    &__time {
+      color: #cd5a00;
+      font-size: 25px;
+    }
+
+    p {
+      font-size: 20px;
+      font-weight: 700;
+    }
   }
 }
