--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,14 @@
   margin-bottom: 25px;
   background-color: #f5f5f5;
 
+  .menu-back {
+    display: none;
+  }
+
+  .show {
+    display: flex;
+  }
+
   .container {
     display: flex;
     justify-content: space-between;
@@ -94,9 +102,10 @@
       flex-direction: column;
       position: absolute;
       top: 57px;
-      right: -37px;
+      right: 0px;
       border: 1px solid #000;
       z-index: 9;
+      background-color: #fff;
 
       a {
         color: #000;
@@ -138,16 +147,19 @@
     display: flex;
     flex-direction: column;
   }
+
   &-name {
     font-size: 30px;
     text-align: center;
   }
+
   &-items {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 30px 0px;
   }
+
   &-item {
     width: 45%;
     max-height: 360px;
@@ -163,7 +175,7 @@
 
     img {
       width: 100%;
-      height: 360px;
+      background-size: cover;
     }
 
     &__name {
@@ -557,6 +569,7 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 30px;
+    margin: 0px 15px;
 
     h3,
     h2 {
