--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -1,18 +1,14 @@
-@media (max-width: 1000px) {
-  .footer {
-    .title {
-      font-size: 13px;
-    }
-
-    .item_menu {
-      li {
-        font-size: 11px;
-      }
-    }
+@media (max-width: 1250px) {
+  .container {
+    padding: 0 30px;
   }
 }
 
 @media (max-width: 1024px) {
+  .category-item__name {
+    top: 120px;
+  }
+
   .burger {
     width: 40px;
     height: 35px;
@@ -29,7 +25,7 @@
       &::before {
         content: "";
         position: absolute;
-        top: 5px;
+        top: 7px;
         height: 3px;
         width: 100%;
         background-color: #515758;
@@ -38,7 +34,7 @@
       &::after {
         content: "";
         position: absolute;
-        bottom: 5px;
+        bottom: 7px;
         height: 3px;
         width: 100%;
         background-color: #515758;
@@ -58,7 +54,432 @@
     }
 
     &__right {
-      display: none !important;
+      .login {
+        display: none !important;
+      }
+
+      .active {
+        left: -50px;
+      }
+    }
+  }
+
+  .pagination {
+    padding: 0px 30px;
+  }
+
+  .product-info {
+    .container {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+
+    &-photo {
+      align-self: center;
+      margin-bottom: 20px;
+    }
+
+    &__block {
+      margin-left: 0;
+
+      &-name {
+        text-align: center;
+      }
+    }
+  }
+
+  .menu-back {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #f5f5f5;
+    z-index: 10;
+  }
+
+  .menu-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    &__navigation {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+
+      a {
+        margin-bottom: 20px;
+        color: #000;
+        text-decoration: none;
+        font-size: 22px;
+      }
+    }
+
+    .close {
+      position: absolute;
+      top: 35px;
+      right: 35px;
+      font-size: 30px;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .footer {
+    .title {
+      font-size: 13px;
+    }
+
+    .item_menu {
+      li {
+        font-size: 11px;
+      }
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .category-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h3 {
+      top: 105px;
+      font-size: 35px;
+    }
+  }
+
+  .product {
+    display: flex;
+
+    &__item {
+      width: 300px;
+      margin-right: 15px;
+
+      &:nth-child(even) {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .footer {
+    .info {
+      padding-right: 30px;
+      padding-left: 30px;
+
+      &_item {
+        max-width: 300px;
+      }
+    }
+
+    .soc_links {
+      font-size: 14px;
+    }
+
+    .item_menu li {
+      font-size: 14px;
+    }
+  }
+}
+
+@media (max-width: 830px) {
+  .category-items {
+    h3 {
+      top: 90px;
+      font-size: 30px;
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .favorite {
+    &-item {
+      h2 {
+        font-size: 25px;
+      }
+
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+
+  .cart-block {
+    &__item {
+      img {
+        width: 250px;
+      }
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .brand {
+    &__item {
+      img {
+        width: 80px;
+      }
+    }
+  }
+
+  .favorite {
+    &-item {
+      a {
+        width: 200px;
+      }
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .product-info {
+    &-photo {
+      width: 500px;
+      height: 350px;
+      align-self: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  .favorite {
+    &-item {
+      img {
+        max-width: 250px;
+      }
+    }
+  }
+
+  .cart-block {
+    &__item {
+      h3 {
+        font-size: 20px;
+      }
+
+      button {
+        width: 200px;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .login,
+  .register .container {
+    form {
+      max-width: 100%;
+    }
+  }
+
+  .category-items {
+    h3 {
+      top: 60px;
+      font-size: 25px;
+    }
+  }
+
+  .filter {
+    display: none;
+  }
+
+  .product {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    &__item {
+      margin: 0;
+      margin-bottom: 20px;
+    }
+  }
+
+  .footer {
+    .info {
+      &_item {
+        max-width: 150px;
+      }
+    }
+  }
+
+  .product-info {
+    &-photo {
+      width: 450px;
+      height: 300px;
+      align-self: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  .history {
+    &-item {
+      p {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .favorite {
+    &-item {
+      display: flex;
+      flex-direction: column-reverse;
+
+      img {
+        align-self: center;
+        margin-bottom: 20px;
+      }
+
+      a {
+        align-self: center;
+      }
+
+      &-info {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        text-align: center;
+      }
+    }
+  }
+
+  .cart-block {
+    &__item {
+      display: flex;
+      flex-direction: column-reverse;
+
+      img {
+        align-self: center;
+        margin-bottom: 20px;
+      }
+
+      &-desc {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        text-align: center;
+
+        button {
+          align-self: center;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .category-items {
+    h3 {
+      top: 50px;
+      font-size: 20px;
+    }
+  }
+
+  .brand {
+    &__item {
+      img {
+        width: 50px;
+      }
+    }
+  }
+
+  .footer {
+    .info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      &_item {
+        max-width: 100%;
+        margin-bottom: 20px;
+
+        .title {
+          text-align: center;
+        }
+
+        li {
+          list-style: none;
+        }
+      }
+    }
+  }
+
+  .search {
+    padding: 0px 15px;
+  }
+
+  .product-info {
+    &-photo {
+      width: 400px;
+      height: 300px;
+      align-self: center;
+      margin-bottom: 20px;
+    }
+
+    &-name {
+      font-size: 26px;
+    }
+  }
+
+  .history {
+    &-item {
+      p {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+@media (max-width: 415px) {
+  .category-items {
+    h3 {
+      top: 40px;
+      font-size: 16px;
+    }
+  }
+
+  .product-info {
+    &-photo {
+      width: 350px;
+      height: 250px;
+      align-self: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  .history {
+    &-item {
+      p {
+        font-size: 13px;
+      }
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .category-items {
+    h3 {
+      top: 35px;
+      font-size: 16px;
+    }
+  }
+
+  .product-info {
+    &-photo {
+      width: 300px;
+      height: 200px;
+      align-self: center;
+      margin-bottom: 20px;
+    }
+  }
+
+  .history {
+    &-item {
+      p {
+        font-size: 11px;
+      }
     }
   }
 }
