--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,10 @@
   margin-bottom: 25px;
   background-color: #f5f5f5;
 
+  .burger {
+    display: none;
+  }
+
   .menu-back {
     display: none;
   }
