--- a/src/App.scss
+++ b/src/App.scss
@@ -142,6 +142,14 @@
   }
 }
 
+.hide {
+  display: none;
+}
+
+.filter-menu {
+  display: none;
+}
+
 .category {
   .container {
     display: flex;
