--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -268,6 +268,26 @@
 }
 
 @media (max-width: 600px) {
+  .filter-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      max-width: 250px;
+      width: 100%;
+      padding: 7px 15px;
+      background-color: #fff;
+      border: 1px solid #000;
+      border-radius: 5px;
+    }
+
+    &-block {
+      margin-top: 20px;
+    }
+  }
+
   .login,
   .register .container {
     form {
